--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,25 +1,148 @@
 body {
-    background-color: white;
-    font-family: $font-family;
+    background-color: #17181c;
+    color: white;
 }
 
-.animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
- }
+header {
+    left: 0;
+    width: 100%;
+    height: 60px;
+}
 
-@keyframes fadeIn {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
- }
+.clear {
+    clear: both;
+}
 
- .fadeIn {
-    -webkit-animation-name: fadeIn;
-    animation-name: fadeIn;
- }
+.center-wrapper {
+    height: 60px;
+    width: 100%;
+    max-width: 1310px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+}
 
- .navbar {
-     border-bottom: 4px solid dodgerblue; 
- }
+.logo-wrapper {
+    width: 350px;
+    height: 100%;
+    float: left;
+}
+
+a:link .logo-wrapper, a:visited .logo-wrapper {
+    color: white;
+}
+
+.logo1 {
+    height: 100%;
+    width: 60px;
+    
+    background: url("../images/Rocket.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    float: left;
+}
+
+.logo2 {
+    width: 150px;
+    font-size: 50px;
+    line-height: 60px;
+
+    float: left;
+}
+
+.menu-wrapper {
+    height: 100%;
+
+    float: right;
+}
+
+h2 {
+    text-align: center;
+}
+
+.mars-10-img {
+    height: 160px;
+    margin: 15px 0px;
+
+    background-image: url("../images/mars-10.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: -280px;
+}
+
+.mars-5-img {
+    width: 650px;
+    height: 300px;
+    margin-right: 15px;
+
+    background-image: url("../images/mars-5.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    float: left;
+}
+
+.mars-6-img {
+    width: 690px;
+    height: 300px;
+    margin-left: 15px;
+
+    background-image: url("../images/mars-6.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    float: right;
+}
+
+.icon-1 {
+    width: 120px;
+    height: 120px;
+
+    display: table;
+    margin: 0 auto;
+    
+    background-image: url("../images/icon-1.svg");
+}
+
+.icon-2 {
+    width: 120px;
+    height: 120px;
+
+    display: table;
+    margin: 0 auto;
+    
+    background-image: url("../images/icon-2.svg");
+}
+
+.icon-3 {
+    width: 120px;
+    height: 120px;
+
+    display: table;
+    margin: 0 auto;
+    
+    background-image: url("../images/icon-3.svg");
+}
+
+.width33 {
+    width: 33%;
+    vertical-align: middle;
+    float: left;
+    margin: 15px 0px;
+}
+
+p {
+    margin-top: 15px !important;
+    margin-bottom: 15px !important;
+    text-align: justify !important;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0; 
+}
