--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,5 @@
 @import '_settings.scss';
+@import '_buttons.scss';
 @import '_base.scss';
+@import '_spaceyeoman.scss';
 @import './components/_header.scss';
